# AkjoCLI

./: .tokeignore  Cargo.toml  README.md
.github/: CONTRIBUTING.md  DEVELOPER.md  SECURITY.md
.github/ISSUE_TEMPLATE/: 1-feature-request.yaml  2-bug-report.yaml  3-feature-enhancement.yaml  4-vulnerability.yaml  5-documentation.yaml  6-testing.yaml  7-question.yaml  8-other.yaml
src/: action_def.rs  command_def.rs  global.rs  global_opts.rs  main.rs  subject_types.rs
src/actions/: action.rs  mod.rs
src/actions/delete/: _action.rs  mod.rs
src/actions/edit/: _action.rs  mod.rs
src/actions/new/: _action.rs  mod.rs  project.rs
src/commands/: delete.rs  edit.rs  greet.rs  mod.rs  new.rs
src/commands/delete/: _command.rs  _opts.rs  mod.rs
src/commands/edit/: _command.rs  _opts.rs  mod.rs
src/commands/init/: _command.rs  _opts.rs  mod.rs
src/commands/new/: _command.rs  _opts.rs  mod.rs
src/util/: base_dir.rs  mod.rs  new_project.rs  path_autocomplete.rs  project_types.rs
