[package]
name = "akjo-cli"
version = "0.0.1"
description = "The command line interface for managing projects and other resources inside of AkjoStudios."
authors = ["Lukas Küffer <lukas.kueffer@outlook.com>"]

edition = "2021"

readme = "README.md"
license-file = "LICENSE"

repository = "https://github.com/AkjoStudios/AkjoCLI"
homepage = ""
documentation = ""

keywords = []
categories = []

[[bin]]
name = "akjo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.17", features = ["derive", "cargo"] }
colored = "2"
ctrlc = "3.2.3"