[package]
name = "akjo-cli"
version = "0.0.1"
description = "The command line interface for managing projects and other resources inside of AkjoStudios."
authors = ["Lukas Küffer <lukas.kueffer@outlook.com>"]

edition = "2021"

readme = "README.md"
license-file = "LICENSE"

repository = "https://github.com/AkjoStudios/AkjoCLI"
homepage = ""
documentation = ""

keywords = []
categories = []

[[bin]]
name = "akjo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.17", features = ["derive", "cargo"] }
colored = "2.0.0"
console = "0.15.2"
convert_case = "0.6.0"
ctrlc = "3.2.3"
directories = "4.0.1"
email_address = "0.2.4"
futures = { version = "0.3.17", features = ["executor"] }
globalenv = "0.4.2"
indicatif = "0.17.1"
inquire = "0.5.2"
is_elevated = "0.1.2"
octocrab = "0.17.0"
os_info = "3.5.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
spinoff = "0.5.4"
tokio = { version = "1.21.2", features = ["full"] }
unicode-segmentation = "1.10.0"
walkdir = "2.3.2"